# runcvm

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.firecracker-additions  Dockerfile.firecracker-kernels  INTEGRATION_GUIDE.md  README.md  build-firecracker-kernel.sh  build.sh  test-storage.sh
build-utils/: elf-patcher.sh  entrypoint-install.sh  install.sh  make-bundelf-bundle.sh
dkvm-init/: dumb-init.c
dkvm-scripts/: cgroups  dkvm  dkvm-ctr-defaults  dkvm-ctr-entrypoint  dkvm-ctr-exec  dkvm-ctr-exit  dkvm-ctr-qemu  dkvm-ctr-qemu-ifdown  dkvm-ctr-qemu-ifup  dkvm-ctr-qemu-poweroff  dkvm-ctr-shutdown  dkvm-ctr-virtiofsd  dkvm-install-runtime.sh  dkvm-runtime  dkvm-runtime-install.sh  dkvm-upgrade.sh  dkvm-vm-exec  dkvm-vm-init  dkvm-vm-qemu-ga  dkvm-vm-start  install.sh
docs/: logging.md
docs/docker/: ROADMAP.md  firecracker-known-issues.md
docs/kubernetes/: ROADMAP.md
dumb-init/: dumb-init.c
kernels/firecracker/: config-firecracker-aarch64  config-firecracker-x86_64
kernels/oraclelinux/: addvirtiofs.conf
patches/dnsmasq/: remove-passwd-requirement.patch
patches/dropbear/: runcvm.patch
patches/mkinitfs/: nlplug-findfs.patch
patches/seabios/: qemu-fw-cfg-fix.patch
qemu-exit/: qemu-exit.c
runcvm-fuse-client/: Cargo.toml
runcvm-fuse-client/src/: main.rs
runcvm-fused/: Cargo.toml
runcvm-fused/src/: config.rs  main.rs  passthrough.rs  transport.rs
runcvm-init/: dumb-init.c
runcvm-scripts/: runcvm-create-rootfs  runcvm-ctr-defaults  runcvm-ctr-entrypoint  runcvm-ctr-entrypoint-unified  runcvm-ctr-exec  runcvm-ctr-exit  runcvm-ctr-firecracker  runcvm-ctr-qemu  runcvm-ctr-qemu-ifup  runcvm-ctr-qemu-poweroff  runcvm-ctr-shutdown  runcvm-ctr-virtiofsd  runcvm-install-runtime.sh  runcvm-ip-functions  runcvm-nfsd  runcvm-runtime  runcvm-upgrade.sh  runcvm-vm-defaults  runcvm-vm-exec  runcvm-vm-init  runcvm-vm-init-firecracker  runcvm-vm-qemu-ga  runcvm-vm-start  runcvm-vm-start-wrapper
runcvm-scripts/functions/: cgroupfs
tests/: framework.sh  run  test-firecracker-basic.sh
tests/00-http-docker-swarm/: test
tests/01-mariadb/: test
tests/02-user-workdir/: test
tests/03-env/: test
tests/04-docker/: phase2-testing-guide.md  run-all-storage-tests.sh  test-caching.sh  test-network.sh  test-persistence.sh  test-storage.sh  test-tmpfs.sh
(+9 files in other folders)
