[package]
name = "runcvm-fuse-client"
version = "0.1.0"
edition = "2021"
description = "FUSE client for RunCVM guest VM over vsock"

[dependencies]
# vsock for VM communication
vsock = "0.4"

# Logging
log = "0.4"
env_logger = "0.11"

# System calls
nix = { version = "0.28", features = ["fs", "mount"] }

# Error handling
anyhow = "1"

[profile.release]
lto = true
strip = true
opt-level = "z"
codegen-units = 1
panic = "abort"
