[package]
name = "runcvm-fused"
version = "0.1.0"
edition = "2021"
description = "FUSE passthrough daemon for RunCVM over Firecracker vsock"

[dependencies]
# Logging
log = "0.4"
env_logger = "0.11"

# Error handling
anyhow = "1"

[profile.release]
lto = true
strip = true
opt-level = "z"
codegen-units = 1
panic = "abort"
